k3s/nfs/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: jpetstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-init-db
              mountPath: /docker-entrypoint-initdb.d
            - name: mysql-pv-volume # pvc 
              mountPath: /var/lib/mysql

          resources: 
            limits:
              cpu: 1000m
              memory: 512Mi
      volumes:
        - name: mysql-pv-volume # pv 
          persistentVolumeClaim:
            claimName: mysql-pv-claim # pvc
        - name: mysql-init-db
          configMap:
            name: mysql-init-config
