k3s/nfs/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: jpetstore
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30360
      protocol: TCP
  selector:
    app: mysql
